<resources>
    <string name="app_name">FuteOnline</string>
    <string name="app_details">Gerenciador esportivo</string>
    <string name="title_activity_config">Configiração</string>
    <string name="title_notification_view">Notificações</string>
    <string name="title_activity_atividade2">Atividade2</string>
    <string name="txt_login">Email</string>
    <string name="txt_password">Senha</string>
    <string name="txt_auth">Entrar</string>
    <string name="txt_register">Cadastre-se</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Senha inválida</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="txt_logged">Entrar</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Fechar</string>
    <string name="action_settings">Configurações</string>
    <string name="txt_logout">Sair</string>
    <string name="txt_security">Segurança</string>
    <string name="txt_friends">Amigos</string>
    <string name="txt_soccer_schedule">Agendar Jogo</string>
    <string name="txt_invite_game">Convite para Jogo</string>
    <string name="txt_players">Jogadores</string>
    <string name="txt_goalkeeper_find">Alugar Goleiro</string>
    <string name="txt_notifications">Notificações</string>
    <string name="txt_groups">Grupos</string>
    <string name="txt_moderation">Moderadores</string>
    <string name="txt_teams">Times</string>
    <string name="txt_ranking">Ranking</string>
    <string name="txt_manage">Gerenciar</string>
    <string name="txt_user_plans">Planos</string>
    <string name="txt_goalkeeper">Eu, Goleiro</string>



    <!-- PREFERENCES -->

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
