<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_peoples"
            android:title="@string/txt_friends" />
        <item
            android:id="@+id/nav_soccer_schedule"
            android:icon="@drawable/ic_calendar"
            android:title="@string/txt_soccer_schedule"
            android:enabled="false"/>
        <item
            android:id="@+id/nav_invite_game"
            android:icon="@drawable/ic_calendar"
            android:title="@string/txt_invite_game"
            android:enabled="false"/>
        <item
            android:id="@+id/nav_players"
            android:icon="@drawable/ic_list1"
            android:title="@string/txt_players"
            android:enabled="false"/>
        <item
            android:id="@+id/nav_goalkeeper_find"
            android:icon="@drawable/ic_list1"
            android:title="@string/txt_goalkeeper_find"
            android:enabled="false"/>
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/txt_notifications"
            android:enabled="false"/>

    </group>

    <item android:title="@string/txt_manage">
        <menu>
            <item
                 android:id="@+id/nav_groups"
                 android:title="@string/txt_groups"
                 android:enabled="false"/>
             <item
                 android:id="@+id/nav_group_moderator"
                 android:title="@string/txt_moderation"
                 android:enabled="false"/> -->
            <item
                android:id="@+id/nav_goalkeeper"
                android:title="@string/txt_goalkeeper"
                android:enabled="false"/>
        </menu>
    </item>

    <item android:title="@string/txt_security">
        <menu>
            <item
                android:id="@+id/nav_user_plans"
                android:icon="@drawable/ic_plans"
                android:title="@string/txt_user_plans"
                android:enabled="false"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/txt_logout" />
        </menu>
    </item>

</menu>
